# pvr.chinachu

./: .gitattributes  .gitignore  .travis.yml  ChangeLog.txt  Makefile  Makefile.am  Makefile.in  README.md  bootstrap  build.ps1  configure  configure.ac
.github/workflows/: ci.yml
VS2015/chinachu/: chinachu.vcxproj  chinachu.vcxproj.filters
VS2015/pvr_client/: pvr_client.rc  pvr_client.vcxproj  pvr_client.vcxproj.filters  resource.h
VS2019/: pvr.chinachu.sln
VS2019/chinachu/: chinachu.vcxproj  chinachu.vcxproj.filters
VS2019/pvr_client/: pvr_client.rc  pvr_client.vcxproj
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
include/: picojson_ex.h
include/chinachu/: genre.h
jni/: Android.mk  Application.mk  pack.sh
src/: Makefile  Makefile.am  Makefile.in
src/chinachu/: Makefile.am  Makefile.in  api.cpp  api.h  chinachu.h  genre.cpp  genre.h  recorded.cpp  recorded.h  recording.cpp  recording.h  reserves.cpp  reserves.h  rules.cpp  rules.h  schedule.cpp  schedule.h
src/pvr_client/: Makefile.am  Makefile.in  channel.cpp  demux.cpp  information.cpp  initialize.cpp  live.cpp  recorded.cpp  recording.cpp  settings.cpp  stream.cpp  timer.cpp
template/pvr.chinachu/: addon.xml
template/pvr.chinachu/resources/: settings.xml
template/pvr.chinachu/resources/language/English/: strings.po
template/pvr.chinachu/resources/language/Japanese/: strings.po
